fix(styles): adjust spacing for card-input and inputLabel component

--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -95,7 +95,7 @@ h4 {
   text-align: center;
   margin-bottom: 2.5px;
   margin-left: -0.3em;
-  margin-right: -0.8em;
+  margin-right: -0.3em;
   clip-path: inset(0 0.5em 0 0.5em);
   &:focus {
     @extend .card-input;
